# newsletter_server

./: .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml.sample
configuration/: configuration.yaml.sample
migrations/: 20240430095535_create_subscriptions_table.sql  20240826083708_seed_user.sql
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
