[package]
name = "newsletter_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter_server"

[dependencies]
actix-web="4"
tokio = {version="1", features=["macros", "rt-multi-thread"]}
serde = {version="1", features=["derive"]}
config = "0.14"
uuid = {version="1", features=["v4"]}
chrono = {version="0.4", default-features=false, features=["clock"]}
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
serde-aux = "3"
unicode-segmentation = "1.11.0"
validator = "0.18.1"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
claim = "0.5.0"
fake = "2.9.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.10.0"
